Make month range font size larger in predefined reports

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1051,6 +1051,9 @@ textarea#report_description {
     padding-bottom: 5px;
     margin-bottom: 5px;
 }
+span.month-range {
+  font-size: 23px;
+}
 li.predefined-report {
     position: relative;
 }
