--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -3,7 +3,9 @@
 </div>
 
 <p>
-  <%= report_month_range @start_date, @end_date %>
+  <span class="month-range">
+    <%= report_month_range @start_date, @end_date %>
+  </span>
   <span class="separator csv">|</span>
   <%= link_to "CSV", params.merge({:action=>:csv}), :class=>"csv" %>
 </p>
