--- a/app/views/trips/update_allocation.html.erb
+++ b/app/views/trips/update_allocation.html.erb
@@ -21,7 +21,7 @@
         <input id="get-count" type="submit" value="Get Trip Count" name="commit"/>
         <span id="trip-count">
           Available for Transfer:
-          <%= Trip::RESULT_CODES.map {|key,value| pluralize(@trip_count[key], "#{value} Trip") }.join(", ") %> 
+          <%= Trip::RESULT_CODES.map {|key,value| pluralize(@trip_count[value], "#{key} Trip") }.join(", ") %> 
         </span>
       </li>
       
@@ -42,7 +42,7 @@
         <% if @query.update_allocation? %>
         <span id="updated-count">
           Updated to Allocation <%= @allocation.name %>:
-          <%= Trip::RESULT_CODES.map {|key,value| pluralize(@trips_transferred[key], "#{value} Trip") }.join(", ") %> 
+          <%= Trip::RESULT_CODES.map {|key,value| pluralize(@trips_transferred[value], "#{key} Trip") }.join(", ") %> 
         </span>
         <% end %>
       </li>
