--- a/app/views/trips/update_allocation.html.erb
+++ b/app/views/trips/update_allocation.html.erb
@@ -39,7 +39,7 @@
       
       <li>
         <input id="transfer-trips" type="submit" value="Transfer Trips" name="commit"/>
-        <% if @query.update_allocation? %>
+        <% if @query.update_allocation? && @completed_trips_count > 0 %>
         <span id="updated-count">
           Updated to Allocation <%= @allocation.name %>:
           <%= Trip::RESULT_CODES.map {|key,value| pluralize(@trips_transferred[value], "#{key} Trip") }.join(", ") %> 
