--- a/app/views/trips/_trips.html.erb
+++ b/app/views/trips/_trips.html.erb
@@ -20,35 +20,34 @@
     </tr>
   </thead>
   <tbody>
-  <% @trips.each do |trip| %>
-    <tr>
-      <td><%= link_to trip.customer.name, customer_path(trip.customer) %></td>
-      <td><% trip.result_code %></td>
-      <td> <%= trip.allocation.provider.name if trip.allocation.provider %></td>
-      <td> <%= trip.allocation.project.funding_source if trip.allocation.project %></td>
-      <td>
-      <%= raw gmaps_address_link trip.pickup_address, "trip-pickup" %></td>
-      <td>
-      <%= raw gmaps_address_link trip.dropoff_address, "trip-dropoff" %></td>
-      <td><%= trip.customers_served %></td>
-      <td>
-      <% if trip.customers_served > 1 %>
-      <%= link_to "Yes", url_for(:action=>:share, :id=>trip.routematch_share_id), :html_options=>{:title=>"View all trips in this shared ride"} %></td>
-      <% else %>
-      No
-      <% end %>
-      <td>
-      <% if trip.run %>
-      <%= link_to trip.run.display_name, url_for(:action=>:run, :id=>trip.run.base_id), :html_options=>{:title=>"View all trips in this Run"} %></td>
-      <% else %>
-      (no run)
-      <% end %>
-      
-      </td>
-      <td>$<%= trip.fare %></td>
-      <td>
-      <%= link_to "Details", :action=>:show, :id=>trip.id, :html_options=>{:title=>"View details for this trip"} %></td>
-    </tr>
+    <% @trips.each do |trip| %>
+      <tr>
+        <td><%= link_to trip.customer.name, customer_path(trip.customer) %></td>
+        <td><%= Trip::RESULT_CODES.invert[trip.result_code] %></td>
+        <td><%= trip.allocation.provider.name if trip.allocation.provider %></td>
+        <td><%= trip.allocation.project.funding_source if trip.allocation.project %></td>
+        <td><%= raw gmaps_address_link trip.pickup_address, "trip-pickup" %></td>
+        <td><%= raw gmaps_address_link trip.dropoff_address, "trip-dropoff" %></td>
+        <td><%= trip.customers_served %></td>
+        <td>
+          <% if trip.shared? %>
+            <%= link_to "Yes", url_for(:action=>:share, :id=>trip.routematch_share_id) %>
+          <% else %>
+            No
+          <% end %>
+        </td>
+        <td>
+          <% if trip.run %>
+            <%= link_to trip.run.display_name, url_for(:action=>:run, :id=>trip.run.base_id) %>
+          <% else %>
+            (no run)
+          <% end %>
+        </td>
+        <td><%= number_to_currency trip.fare %></td>
+        <td>
+          <%= link_to "Details", :action=>:show, :id=>trip.id, :html_options=>{:title=>"View details for this trip"} %>
+        </td>
+      </tr>
     <% end %>
   </tbody>
 </table>
