--- a/app/views/trips/list.html.erb
+++ b/app/views/trips/list.html.erb
@@ -22,7 +22,8 @@
 
     <div class="actions">
       <%= f.submit "Search", :id => "trip-search" %>
-      <%= f.submit "Download As CSV" %>
+      <%= f.submit "Download All Fields as CSV" %>
+      <%= f.submit "Download BPA Invoice Data" %>
     </div>
 
   </fieldset>
