Move predefined report row classes into their own files

--- a/app/views/reports/_totals.html.erb
+++ b/app/views/reports/_totals.html.erb
@@ -1,4 +1,4 @@
-<% row = controller.sum(row) %>
+<% row = ReportRow.sum(row) %>
 <tr class="<% if group_fields.size >= 2 %>sum-<% end %>totals">
   <% (@groups_size - 1).times do %>
     <td class="indent">&nbsp;</td>
