--- a/app/views/reports/_row.html.erb
+++ b/app/views/reports/_row.html.erb
@@ -81,22 +81,22 @@
   <% end %>
   <% if @fields.member? 'cost_per_trip' %>
     <td class="number">
-      <%= number_to_currency(row.cost_per_trip) %>
+      <%= row.cost_per_trip.present? ? number_to_currency(row.cost_per_trip) : raw("&mdash;") %>
     </td>
   <% end %>
   <% if @fields.member? 'cost_per_mile' %>
     <td class="number">
-      <%= number_to_currency(row.cost_per_mile) %>
+      <%= row.cost_per_mile.present? ? number_to_currency(row.cost_per_mile) : raw("&mdash;") %>
     </td>
   <% end %>
   <% if @fields.member? 'cost_per_hour' %>
     <td class="number">
-      <%= number_to_currency(row.cost_per_hour) %>
+      <%= row.cost_per_hour.present? ? number_to_currency(row.cost_per_hour) : raw("&mdash;") %>
     </td>
   <% end %>
   <% if @fields.member? 'miles_per_ride'%>
     <td class="number">
-      <%= number_with_precision(row.miles_per_ride, :precision => 1, :delimiter => ",") %>
+      <%= row.miles_per_ride.present? ? number_with_precision(row.miles_per_ride, :precision => 1, :delimiter => ",") : raw("&mdash;") %>
     </td>
   <% end %>
   <% if @fields.member? 'turn_downs' %>
