--- a/app/views/trips/show_import.html.erb
+++ b/app/views/trips/show_import.html.erb
@@ -15,3 +15,30 @@
 
   </fieldset>
 </form>
+<h1>Past Imports</h1>
+<table>
+  <tr>
+    <th>Imported At</th>
+    <th>File Name</th>
+    <th>Trip Count</th>
+    <th></th>
+  </tr>
+  <% for trip_import in @trip_imports %>
+    <tr>
+      <td>
+        <%= trip_import.created_at.in_time_zone("Pacific Time (US & Canada)").strftime('%D %I:%M %p') %>
+      </td>
+      <td>
+        <%= trip_import.file_name || '<File name not recorded>' %>
+      </td>
+      <td>
+        <%= trip_import.trips.count %>
+      </td>
+      <td>
+        <%= link_to "View", {:action => :list, "trip_query[trip_import_id]" => trip_import.id, :all_dates=>1}, :class => :details %>
+      </td>
+    </tr>
+  <% end %>
+</table>
+<%= will_paginate @trip_imports %>
+
