--- a/app/views/trips/list.html.erb
+++ b/app/views/trips/list.html.erb
@@ -18,6 +18,10 @@
         <%= f.label :allocation, "Allocation:" %> 
         <%= f.select :allocation, options_for_select( @allocations.map { |a| [a.name, a.id, {'data-provider-id' => a.provider_id } ] }), :include_blank => true %>
       </li>
+      <li>
+        <%= f.label :subcontractor, "Subcontractor:" %> 
+        <%= f.select :subcontractor, @subcontractors, :include_blank => true %>
+      </li>
     </ol>
 
     <div class="actions">
