Add ability to filter trip list by customer name

--- a/app/views/trips/list.html.erb
+++ b/app/views/trips/list.html.erb
@@ -5,8 +5,25 @@
 <%= form_for @query, :html=>{:id=>"trip-filter", :method=>:get}, :url=>{:action=>:list} do |f| %>
   <fieldset>
     <ol class="section first">
-      <li><%= f.label :start_date, "Start Date:" %> <%= f.text_field :start_date, :class=>"datepicker" %></li>
-      <li><%= f.label :end_date, "End Date:" %> <%= f.text_field :end_date, :class=>"datepicker" %></li>
+      <li>
+        <%= f.check_box :all_dates %> <%= f.label :all_dates %>
+      </li>
+      <li>
+        <%= f.label :start_date, "Start Date:" %> 
+        <%= f.text_field :start_date, :class=>"datepicker" %>
+      </li>
+      <li>
+        <%= f.label :end_date, "End Date:" %> 
+        <%= f.text_field :end_date, :class=>"datepicker" %>
+      </li>
+      <li>
+        <%= f.label :customer_first_name, "Customer first name contains:" %> 
+        <%= f.text_field :customer_first_name %>
+      </li>
+      <li>
+        <%= f.label :customer_last_name, "Customer last name contains:" %> 
+        <%= f.text_field :customer_last_name %>
+      </li>
     </ol>
 
     <ol class="section fourth">
