--- a/app/views/trips/_trips.html.erb
+++ b/app/views/trips/_trips.html.erb
@@ -7,6 +7,7 @@
   <thead>
     <tr>
       <th>Customer</th>
+      <th>Date</th>
       <th>Status</th>
       <th>Provider</th>
       <th>Funding Source</th>
@@ -24,6 +25,7 @@
     <% @trips.each do |trip| %>
       <tr>
         <td><%= link_to trip.customer.name, customer_path(trip.customer) %></td>
+        <td><%= trip.date %></td>
         <td><%= Trip::RESULT_CODES.invert[trip.result_code] %></td>
         <td><%= trip.allocation.provider.name if trip.allocation.provider %></td>
         <td><%= trip.allocation.project.funding_source if trip.allocation.project %></td>
