--- a/app/views/trips/bpa_index.csv.erb
+++ b/app/views/trips/bpa_index.csv.erb
@@ -1,40 +1,43 @@
 <% headers = %w{Trip\ Date First\ Name Last\ Name StartTime EndTime Duration Share\ ID Ride\ Type Miles Cust\ Type Billed\ Amount Invoice\ Amount Apportioned\ Amount Difference Funding\ Source Fare In/Out Guest Attendant Mobility\ Type Completed Customer\ ID Project\ # Override Trip\ Purpose Program SPD\ Billing\ Miles Customer Total\ Trips Provider Service\ End\ Date Billing\ Distance} %>
-<%= CSV.generate_line(headers, :row_sep => nil).html_safe %>
-<% @trips.each do |trip| %>
-  <% row = [
-    trip.date, 
-    trip.customer.first_name,
-    trip.customer.last_name,
-    trip.start_at.strftime("%I:%M %p"),
-    trip.end_at.strftime("%I:%M %p"),
-    minutes_to_hours_colon_minutes(trip.apportioned_duration),
-    trip.routematch_share_id,
-    trip.shared? ? 'Shared' : 'Indiv',
-    trip.apportioned_mileage,
-    trip.customer.customer_type,
-    trip.fare,
-    trip.calculated_bpa_fare,
-    trip.apportioned_fare,
-    ((trip.calculated_bpa_fare || 0) - (trip.fare || 0)),
-    trip.allocation.routematch_override.try(:split,'::').try(:slice,0),
-    trip.customer_pay,
-    trip.in_trimet_district ? 'In' : 'Out',
-    trip.guest_count,
-    trip.attendant_count,
-    trip.mobility,
-    trip.result_code,
-    trip.customer.routematch_customer_id,
-    trip.allocation.project.try(:project_number),
-    trip.allocation.routematch_override,
-    trip.purpose_type,
-    trip.allocation.program,
-    trip.estimated_trip_distance_in_miles,
-    1,
-    trip.guest_count + trip.attendant_count + 1,
-    trip.allocation.provider.name,
-    service_end_date(trip.date),
-    trip.bpa_billing_distance
-  ] %>
-  <%= CSV.generate_line(row, :row_sep => nil).html_safe %>
+<% csv = '' %>
+<% CSV.generate(csv,:row_sep => "\r\n") do |csv| %>
+  <% csv << headers %>
+  <% @trips.each do |trip| %>
+    <% row = [
+      trip.date, 
+      trip.customer.first_name,
+      trip.customer.last_name,
+      trip.start_at.strftime("%I:%M %p"),
+      trip.end_at.strftime("%I:%M %p"),
+      minutes_to_hours_colon_minutes(trip.apportioned_duration),
+      trip.routematch_share_id,
+      trip.shared? ? 'Shared' : 'Indiv',
+      trip.apportioned_mileage,
+      trip.customer.customer_type,
+      trip.fare,
+      trip.calculated_bpa_fare,
+      trip.apportioned_fare,
+      ((trip.calculated_bpa_fare || 0) - (trip.fare || 0)),
+      trip.allocation.routematch_override.try(:split,'::').try(:slice,0),
+      trip.customer_pay,
+      trip.in_trimet_district ? 'In' : 'Out',
+      trip.guest_count,
+      trip.attendant_count,
+      trip.mobility,
+      trip.result_code,
+      trip.customer.routematch_customer_id,
+      trip.allocation.project.try(:project_number),
+      trip.allocation.routematch_override,
+      trip.purpose_type,
+      trip.allocation.program,
+      trip.estimated_trip_distance_in_miles,
+      1,
+      trip.guest_count + trip.attendant_count + 1,
+      trip.allocation.provider.name,
+      service_end_date(trip.date),
+      trip.bpa_billing_distance
+    ] %>
+    <% csv << row %>
+  <% end %>
 <% end %>
-
+<%= csv.html_safe %>
