Add ability to filter and group by subcontractor

--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -7,25 +7,31 @@
       </li>
       <li>
         <h2>Funding Sources to Include</h2>
-        <select class="multi full" id="report_allocations" multiple="multiple" name="report[funding_subsource_names][]">
+        <select class="multi full" id="report_funding_subsource_names" multiple="multiple" name="report[funding_subsource_names][]">
           <%= options_for_select(@funding_subsource_names, @report.funding_subsource_names) %>
         </select>
       </li>
       <li>
         <h2>Providers to Include</h2>
-        <select class="multi full" id="report_allocations" multiple="multiple" name="report[providers][]">
+        <select class="multi full" id="report_providers" multiple="multiple" name="report[providers][]">
           <%= options_for_select(@providers, @report.provider_ids) %>
         </select>
       </li>
       <li>
+        <h2>Subcontractors to Include</h2>
+        <select class="multi full" id="report_subcontractor_names" multiple="multiple" name="report[subcontractor_names][]">
+          <%= options_for_select(@subcontractor_names, @report.subcontractor_names) %>
+        </select>
+      </li>
+      <li>
         <h2>Programs to Include</h2>
-        <select class="multi full" id="report_allocations" multiple="multiple" name="report[program_names][]">
+        <select class="multi full" id="report_program_names" multiple="multiple" name="report[program_names][]">
           <%= options_for_select(@program_names, @report.program_names) %>
         </select>
       </li>
       <li>
         <h2>Counties to Include</h2>
-        <select class="multi full" id="report_allocations" multiple="multiple" name="report[county_names][]">
+        <select class="multi full" id="report_county_names" multiple="multiple" name="report[county_names][]">
           <%= options_for_select(@county_names, @report.county_names) %>
         </select>
       </li>
