--- a/app/views/layouts/trips.html.erb
+++ b/app/views/layouts/trips.html.erb
@@ -3,7 +3,7 @@
           <li><%= link_to "View Trips", :action=>:list %></li>
 <% if current_user.is_admin %>
           <li><%= link_to "Import Trips", :action=>:import %></li>
-          <li><%= link_to "Update Allocations", :action=>:update_allocation %></li>
+          <li><%= link_to "Move Trips", :action=>:update_allocation %></li>
           <li><%= link_to "Mark complete", :action=>:show_bulk_update %></li>
 <% end %>
         </ul>
