Clarify meaning of 'funds'

--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -77,7 +77,7 @@
         <ol>
           <li>
             <input type="checkbox" <%= checked?("funds") %> name="report[fields[funds]]" id="funds" value="1" /> 
-            <label for="funds">Funds</label>
+            <label for="funds">RC Funds</label>
           </li>
           <li>
             <input type="checkbox" <%= checked?("agency_other") %> name="report[fields[agency_other]]" id="agency_other" value="1" /> 
