--- a/app/views/reports/_header.html.erb
+++ b/app/views/reports/_header.html.erb
@@ -32,7 +32,7 @@
     <% (@groups_size - 1).times do %>
       <th class="indent">&nbsp;</th>
     <% end %>
-    <% if @fields.member? 'funds' %><th class="wrap number">Funds</th><% end %>
+    <% if @fields.member? 'funds' %><th class="wrap number">RC Funds</th><% end %>
     <% if @fields.member? 'agency_other' %><th class="wrap number">Agency Other</th><% end %>
     <% if @fields.member? 'vehicle_maint' %><th class="wrap number">Vehicle Maint.</th><% end %>
     <% if @fields.member? 'administrative' %><th class="wrap number">Admin</th><% end %>
