--- a/app/views/summaries/_form.html.erb
+++ b/app/views/summaries/_form.html.erb
@@ -41,7 +41,7 @@
       <li><%= f.label :driver_hours_volunteer, "Volunteer Driver Hours" %> <%= f.text_field :driver_hours_volunteer, :tabindex=>3 %></li>
       <li><%= f.label :escort_hours_volunteer, "Volunteer Escort Hours" %> <%= f.text_field :escort_hours_volunteer ,:tabindex=>3 %></li>
       <li><%= f.label :administrative_hours_volunteer, "Volunteer Admin Hours:" %> <%= f.text_field :administrative_hours_volunteer, :tabindex=>3 %></li>
-      <li><%= f.label :funds, "Funds:" %> <%= f.text_field :funds, :tabindex=>3 %></li>
+      <li><%= f.label :funds, "RC Funds:" %> <%= f.text_field :funds, :tabindex=>3 %></li>
       <li><%= f.label :donations, "Donations:" %> <%= f.text_field :donations, :tabindex=>3 %></li>
       <li><%= f.label :agency_other, "Agency Other:" %> <%= f.text_field :agency_other, :tabindex=>3 %></li>
       <li><%= f.label :administrative, "Administrative:" %> <%= f.text_field :administrative, :tabindex=>3 %></li>
