--- a/app/views/summaries/_form.html.erb
+++ b/app/views/summaries/_form.html.erb
@@ -1,14 +1,4 @@
-  <% if @summary.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@summary.errors.count, "error") %> prohibited this summary from being saved:</h2>
-
-      <ul>
-      <% @summary.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <%= render "shared/error_messages", :target => @summary %>
 
   <%= f.hidden_field :id %>
 
