--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -436,11 +436,31 @@ div#error_explanation {
     background-color: #ffffc6;
     border: 1px solid #bbb;
     padding: 15px;
+    overflow: hidden;
+}
+div#error_explanation.expandable {
+  height: 15px;
 }
 div#error_explanation h2 {
     font-size: 16px;
+    padding-bottom: 8px;
     margin: 0;
 }
+div#error_explanation a.shrinker {
+    padding: 8px 0 8px 20px;
+    text-decoration: none;
+    font-size: 11px;
+    line-height: 20px;
+    color: #ffffc6;
+    float: right;
+}
+div#error_explanation.shrinkable a.shrinker {
+    background: url(images/toggle.png) left center no-repeat scroll;
+}
+div#error_explanation.expandable a.shrinker {
+    background: url(images/toggle-expand.png) left center no-repeat scroll;
+}
+
 body.admin div#main li {
   font-size: 16px;
   padding-bottom: 15px;
