Add TriMet provider and program tables, and associate with allocations

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -6,4 +6,6 @@
   <li><%= link_to "Allocations", :controller => "allocations" %></li>
   <li><%= link_to "Providers", :controller => "providers" %></li>
   <li><%= link_to "F.E. Projects", :controller => "projects" %></li>
+  <li><%= link_to "TriMet Providers", :controller => "trimet_providers" %></li>
+  <li><%= link_to "TriMet Programs", :controller => "trimet_programs" %></li>
 </ul>
