--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -437,6 +437,7 @@ div#error_explanation {
     border: 1px solid #bbb;
     padding: 15px;
     overflow: hidden;
+    border-radius: 5px;
 }
 div#error_explanation.expandable {
   height: 15px;
