Tweaks to new TriMet-related models

--- a/app/views/trimet_programs/edit.html.erb
+++ b/app/views/trimet_programs/edit.html.erb
@@ -4,4 +4,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', projects_path, :class => "action-bttn" %>
+<%= link_to 'Back', trimet_programs_path, :class => "action-bttn" %>
