Add TriMet E&D report group to allocations

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -8,4 +8,5 @@
   <li><%= link_to "F.E. Projects", :controller => "projects" %></li>
   <li><%= link_to "TriMet Providers", :controller => "trimet_providers" %></li>
   <li><%= link_to "TriMet Programs", :controller => "trimet_programs" %></li>
+  <li><%= link_to "TriMet Report Groups", :controller => "trimet_report_groups" %></li>
 </ul>
