--- a/app/views/trips/show_bulk_update.html.erb
+++ b/app/views/trips/show_bulk_update.html.erb
@@ -1,16 +1,16 @@
 <div id="page-header">
-  <h1>Mark Trips and Runs Complete</h1>
+  <h1>Mark Data Entry Complete for Trips and Runs</h1>
 </div>
 
-<%= form_tag :action=>:bulk_update, :method=>"POST" do  %>
+<%= form_for @query, :html=>{:id=>"trip-filter", :method=>:post}, :url=>{:action=>:bulk_update} do |f| %>
   <fieldset>
 
     <p>Mark all trips and runs complete for the following period:</p>
 
     <ol class="section first">
-      <li><%= label_tag :start_date, "Start Date:" %> <%= text_field_tag :start_date, nil, :class=>"datepicker", :required => :required %></li>
-      <li><%= label_tag :end_date, "End Date:" %> <%= text_field_tag :end_date, nil, :class=>"datepicker", :required => :required %></li>
-      <li><%= label_tag :provider, "Provider:" %> <%= select_tag :provider_id, options_for_select(@providers), :required => :required %></li> 
+      <li><%= f.label :start_date, "Start Date:" %> <%= f.text_field :start_date, :class=>"datepicker", :required => :required %></li>
+      <li><%= f.label :end_date, "End Date:" %> <%= f.text_field :end_date, :class=>"datepicker", :required => :required %></li>
+      <li><%= f.label :provider, "Provider:" %> <%= f.select :provider, options_for_select(@providers), :required => :required %></li> 
     </ol>
 
     <div class="actions">
@@ -18,4 +18,22 @@
     </div>
 
   </fieldset>
+<% end %>
+
+<% if @incomplete_trips.present? %>
+  <h2>Trips with data entry not complete from <%= @query.start_date.to_s(:long) %> through <%= @query.end_date.to_s(:long) %>:</h2>
+  <table id="data-entry-not-complete">
+    <% @incomplete_trips.keys.sort_by(&:name).each do |provider| %>
+      <tr>
+        <td>
+          <%= provider.name %>
+        </td>
+        <td class="number">
+          <%= @incomplete_trips[provider] %>
+        </td>
+      </tr>
+    <% end %>
+  </table>
+<% else %>
+  <h2>There are no trips with data entry not complete from <%= @query.start_date.to_s(:long) %> through <%= @query.end_date.to_s(:long) %></h2>
 <% end %>
