--- a/app/views/layouts/trips.html.erb
+++ b/app/views/layouts/trips.html.erb
@@ -4,7 +4,7 @@
 <% if current_user.is_admin %>
           <li><%= link_to "Import Trips", :action=>:import %></li>
           <li><%= link_to "Move Trips", :action=>:update_allocation %></li>
-          <li><%= link_to "Mark complete", :action=>:show_bulk_update %></li>
+          <li><%= link_to "Mark Data Entry Complete", :action=>:show_bulk_update %></li>
 <% end %>
         </ul>
 <% end %>
