--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -302,7 +302,7 @@
     </li>
 
     <li>
-      <%= f.label :complete, "Complete:" %> <%= f.check_box :complete, :tabindex=>3 %>
+      <%= f.label :complete, "Data Entry Complete:" %> <%= f.check_box :complete, :tabindex=>3 %>
     </li>
     
     <li>
