--- a/app/views/layouts/summaries.html.erb
+++ b/app/views/layouts/summaries.html.erb
@@ -2,7 +2,7 @@
         <ul id="subnav" class="selfclear">
           <li><%= link_to "View Summaries", :action=>:index %></li>
 <% if current_user.is_admin %>
-          <li><%= link_to "Create Summary", :action=>:show_create %></li>
+          <li><%= link_to "Create Summary", :action=>:new %></li>
 <% end %>
         </ul>
 <% end %>
